--- a/index.html
+++ b/index.html
@@ -1,125 +1,83 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>sld Jubiläumsquiz</title>
+  <meta charset="UTF-8">
+  <title>sld 30 Jahre – Live Quiz</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body {
-      font-family: sans-serif;
-      background: #f2f2f2;
-      padding: 20px;
-      text-align: center;
-    }
-    #quiz-container {
-      background: white;
-      max-width: 600px;
-      margin: auto;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
-    }
-    .question {
-      font-size: 1.2em;
-    }
-    .answers button {
-      display: block;
-      margin: 10px auto;
-      padding: 10px;
-      width: 100%;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      cursor: pointer;
-      background: #eee;
-    }
-    .answers button:hover {
-      background: #ddd;
-    }
-    #start, #next, #restart {
-      padding: 10px 20px;
-      font-size: 1em;
-      margin-top: 20px;
-      cursor: pointer;
-    }
-    #timer {
-      font-weight: bold;
-      color: darkred;
-      margin-bottom: 10px;
-    }
+    body { font-family: sans-serif; background: #111; color: #fff; text-align: center; padding: 2em; }
+    h1, h2 { color: #0ff; }
+    .hidden { display: none; }
+    .question-box { margin: 2em auto; max-width: 600px; background: #222; padding: 1em; border-radius: 8px; }
+    .answers button { display: block; margin: 0.5em auto; padding: 0.5em 1em; font-size: 1em; width: 100%; border-radius: 5px; cursor: pointer; }
+    .answers button:hover { background: #444; }
+    .timer { font-size: 2em; color: #0f0; margin: 0.5em 0; }
+    .leaderboard { text-align: left; max-width: 400px; margin: 2em auto; background: #222; padding: 1em; border-radius: 8px; }
+    .correct { background: green; color: white; }
+    .wrong { background: red; color: white; }
+    input { padding: 0.5em; font-size: 1em; border-radius: 5px; }
+    button { background: #0ff; border: none; padding: 0.5em 1em; margin-top: 1em; cursor: pointer; font-weight: bold; }
   </style>
 </head>
 <body>
-<div id="quiz-container">
-  <h1>sld Jubiläumsquiz</h1>
-  <div id="start-screen">
-    <p>Teste dein Wissen über sld! Du hast 30 Sekunden pro Frage.</p>
-    <button id="start">Start</button>
+
+  <div id="startScreen">
+    <h1>🎉 sld Jubiläums-Quiz 🎉</h1>
+    <p>8 Fragen · 30 Sekunden pro Frage · Punkte für Schnelligkeit</p>
+    <input type="text" id="playerName" placeholder="Gib deinen Namen ein" />
+    <br>
+    <button onclick="startQuiz()">Quiz starten</button>
   </div>
 
-  <div id="question-screen" style="display:none;">
-    <div id="timer">30</div>
-    <div class="question" id="question"></div>
-    <div class="answers" id="answers"></div>
-    <button id="next" style="display:none;">Nächste Frage</button>
+  <div id="quizScreen" class="hidden">
+    <div class="question-box">
+      <div id="questionNum"></div>
+      <div id="questionText"></div>
+      <div class="timer" id="timer">30</div>
+      <div class="answers" id="answerButtons"></div>
+    </div>
   </div>
 
-  <div id="end-screen" style="display:none;">
-    <h2>Quiz beendet!</h2>
-    <p>Deine Punktzahl: <span id="score"></span></p>
-    <button id="restart">Nochmal spielen</button>
+  <div id="resultScreen" class="hidden">
+    <h2>🏁 Quiz beendet!</h2>
+    <p id="finalScore"></p>
+    <p>Scanne deinen Namen + Punkte, damit der Moderator den Sieger küren kann 👇</p>
+    <div class="leaderboard" id="leaderboard">
+      <h3>Dein Ergebnis</h3>
+      <ol id="leaderboardList"></ol>
+    </div>
   </div>
-</div>
 
 <script>
-const quizData = [
+const questions = [
   {
-    question: "Wofür steht \"sld\"?",
-    answers: [
-      "Sound Light DJ's",
-      "Sebastian, Liam, Daniel",
-      "Sound, Light, Display"
-    ],
+    question: "Wofür steht „sld“?",
+    answers: ["Sound Light DJ's", "Sebastian, Liam, Daniel", "Sound, Light, Display"],
     correct: 0
   },
   {
     question: "Wann fand die Gewerbeanmeldung statt?",
-    answers: [
-      "14.01.1995",
-      "14.02.1995",
-      "14.03.1995"
-    ],
+    answers: ["14.01.1995", "14.02.1995", "14.03.1995"],
     correct: 1
   },
   {
     question: "Wie heißen unsere 3 Kernbereiche?",
-    answers: [
-      "Medientechnik, Veranstaltungsorganisation, Elektrotechnik",
-      "Medientechnik, Veranstaltungstechnik, Elektroinstallation",
-      "Medientechnik, Veranstaltungstechnik, Elektrotechnik"
-    ],
+    answers: ["Medientechnik, Veranstaltungsorganisation, Elektrotechnik", "Medientechnik, Veranstaltungstechnik, Elektroinstallation", "Medientechnik, Veranstaltungstechnik, Elektrotechnik"],
     correct: 2
   },
   {
     question: "Seit wann sind wir ServicePartner der NürnbergMesse?",
-    answers: [
-      "seit Juni 2024",
-      "seit Juli 2023",
-      "seit August 2023"
-    ],
+    answers: ["seit Juni 2024", "seit Juli 2023", "seit August 2023"],
     correct: 1
   },
   {
-    question: "Seit wann heißt der \"Ball der Unternehmer\" CEOnite?",
+    question: "Seit wann heißt der „Ball der Unternehmer“ CEOnite?",
     answers: ["2023", "2024", "2025"],
     correct: 1
   },
   {
     question: "Womit hat Sebastian sein erstes Geld verdient?",
-    answers: [
-      "Veranstalten kleiner Feiern",
-      "Reparatur von Plattenspielern",
-      "Zeitungen austragen"
-    ],
+    answers: ["Veranstalten kleiner Feiern", "Reparatur von Plattenspielern", "Zeitungen austragen"],
     correct: 2
   },
   {
@@ -134,88 +92,96 @@ const quizData = [
   }
 ];
 
-let current = 0;
+let currentQuestion = 0;
 let score = 0;
-let timer;
-let timeLeft = 30;
+let startTime;
+let timerInterval;
 
-const startBtn = document.getElementById("start");
-const nextBtn = document.getElementById("next");
-const restartBtn = document.getElementById("restart");
-const questionEl = document.getElementById("question");
-const answersEl = document.getElementById("answers");
-const timerEl = document.getElementById("timer");
-
-startBtn.onclick = () => {
-  document.getElementById("start-screen").style.display = "none";
-  document.getElementById("question-screen").style.display = "block";
-  showQuestion();
-};
-
-nextBtn.onclick = () => {
-  current++;
-  if (current < quizData.length) {
-    showQuestion();
-  } else {
-    showEnd();
+function startQuiz() {
+  const name = document.getElementById("playerName").value.trim();
+  if (!name) {
+    alert("Bitte gib deinen Namen ein!");
+    return;
   }
-};
+  score = 0;
+  currentQuestion = 0;
+  document.getElementById("startScreen").classList.add("hidden");
+  document.getElementById("quizScreen").classList.remove("hidden");
+  nextQuestion();
+}
 
-restartBtn.onclick = () => location.reload();
+function nextQuestion() {
+  if (currentQuestion >= questions.length) {
+    return showResults();
+  }
+  const q = questions[currentQuestion];
+  document.getElementById("questionNum").textContent = `Frage ${currentQuestion + 1} von ${questions.length}`;
+  document.getElementById("questionText").textContent = q.question;
 
-function showQuestion() {
-  nextBtn.style.display = "none";
-  let q = quizData[current];
-  questionEl.textContent = q.question;
-  answersEl.innerHTML = "";
-  timeLeft = 30;
-  timerEl.textContent = timeLeft;
-  startTimer();
-
-  q.answers.forEach((answer, i) => {
+  const answerBox = document.getElementById("answerButtons");
+  answerBox.innerHTML = "";
+  q.answers.forEach((ans, idx) => {
     const btn = document.createElement("button");
-    btn.textContent = answer;
-    btn.onclick = () => handleAnswer(i === q.correct);
-    answersEl.appendChild(btn);
+    btn.textContent = ans;
+    btn.onclick = () => selectAnswer(idx);
+    answerBox.appendChild(btn);
   });
+
+  startTime = Date.now();
+  startTimer(30);
 }
 
-function handleAnswer(isCorrect) {
-  stopTimer();
-  if (isCorrect) {
-    score += 1000 - (30 - timeLeft) * 10;
-  }
-  nextBtn.style.display = "inline-block";
-  Array.from(answersEl.children).forEach(btn => {
-    btn.disabled = true;
-    if (btn.textContent === quizData[current].answers[quizData[current].correct]) {
-      btn.style.background = '#c8e6c9';
-    } else {
-      btn.style.background = '#ffcdd2';
-    }
-  });
-}
-
-function startTimer() {
-  timer = setInterval(() => {
-    timeLeft--;
-    timerEl.textContent = timeLeft;
-    if (timeLeft <= 0) {
-      clearInterval(timer);
-      handleAnswer(false);
+function startTimer(seconds) {
+  const timerEl = document.getElementById("timer");
+  let time = seconds;
+  timerEl.textContent = time;
+  timerInterval = setInterval(() => {
+    time--;
+    timerEl.textContent = time;
+    if (time <= 0) {
+      clearInterval(timerInterval);
+      selectAnswer(-1); // Timeout
     }
   }, 1000);
 }
 
-function stopTimer() {
-  clearInterval(timer);
+function selectAnswer(index) {
+  clearInterval(timerInterval);
+  const q = questions[currentQuestion];
+  const isCorrect = index === q.correct;
+
+  const timeTaken = Math.floor((Date.now() - startTime) / 1000);
+  const base = isCorrect ? 1000 : 0;
+  const timeBonus = isCorrect ? Math.max(0, 300 - timeTaken * 10) : 0;
+  score += base + timeBonus;
+
+  const buttons = document.querySelectorAll("#answerButtons button");
+  buttons.forEach((btn, i) => {
+    btn.disabled = true;
+    if (i === q.correct) btn.classList.add("correct");
+    if (i === index && i !== q.correct) btn.classList.add("wrong");
+  });
+
+  setTimeout(() => {
+    currentQuestion++;
+    nextQuestion();
+  }, 2000);
 }
 
-function showEnd() {
-  document.getElementById("question-screen").style.display = "none";
-  document.getElementById("end-screen").style.display = "block";
-  document.getElementById("score").textContent = score + " Punkte";
+function showResults() {
+  document.getElementById("quizScreen").classList.add("hidden");
+  document.getElementById("resultScreen").classList.remove("hidden");
+  const name = document.getElementById("playerName").value.trim();
+  document.getElementById("finalScore").textContent = `${name}, deine Punktzahl: ${score}`;
+
+  const list = document.getElementById("leaderboardList");
+  list.innerHTML = "";
+  const li = document.createElement("li");
+  li.textContent = `${name} – ${score} Punkte`;
+  list.appendChild(li);
 }
 </script>
+
 </body>
 </html>
+
