--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 </div>
 
 <script>
-const POST_URL = "https://script.google.com/macros/s/AKfycbzCWE2mw3OxEYrwgsvLqRydyLdVObzG-PZlGE7Mw06yMKFuTnUqxuD8RN0Uz54WJg1p_w/exec";
-const GET_URL = "https://script.google.com/macros/s/AKfycbzCWE2mw3OxEYrwgsvLqRydyLdVObzG-PZlGE7Mw06yMKFuTnUqxuD8RN0Uz54WJg1p_w/exec";
+const POST_URL = "https://script.google.com/macros/s/AKfycbzTp1-UMQubi-dYP5aGeN5ldOlOHYWmWSVLSgaEyrGGButnQJGXIj6NdOuioaf2WNjSSw/exec";
+const GET_URL = "https://script.google.com/macros/s/AKfycbzTp1-UMQubi-dYP5aGeN5ldOlOHYWmWSVLSgaEyrGGButnQJGXIj6NdOuioaf2WNjSSw/exec;
 
 const questions = [
   { question: "Wofür steht „sld“?", answers: ["Sound Light DJ's", "Sebastian, Liam, Daniel", "Sound, Light, Display"], correct: 0 },
