--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>sld Jubiläums-Quiz</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body { font-family: sans-serif; background: #111; color: #fff; text-align: center; padding: 2em; }
     h1, h2 { color: #0ff; }
@@ -47,9 +47,23 @@
   </div>
 </div>
 
-<script>
-const POST_URL = "https://script.google.com/macros/s/AKfycbynAiTMOjbtUFootfeeNYmyubdosmwokflyT0keLnKKOo5nhcR8V6tiy54J0y8cP2PA/exec";
-const GET_URL = "https://script.google.com/macros/s/AKfycbynAiTMOjbtUFootfeeNYmyubdosmwokflyT0keLnKKOo5nhcR8V6tiy54J0y8cP2PA/exec";
+<!-- Firebase SDK -->
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+import { getDatabase, ref, push, get, child, query, orderByChild, limitToFirst } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
+
+const firebaseConfig = {
+  apiKey: "AIzaSyAjdBgxFx6KU9OgzqYT31eXpZCxAFr48bk",
+  authDomain: "sld-quiz.firebaseapp.com",
+  databaseURL: "https://sld-quiz-default-rtdb.europe-west1.firebasedatabase.app",
+  projectId: "sld-quiz",
+  storageBucket: "sld-quiz.firebasestorage.app",
+  messagingSenderId: "290545802541",
+  appId: "1:290545802541:web:5f4f16435cd39cce15c7a4"
+};
+
+const app = initializeApp(firebaseConfig);
+const db = getDatabase(app);
 
 const questions = [
   { question: "Wofür steht „sld“?", answers: ["Sound Light DJ's", "Sebastian, Liam, Daniel", "Sound, Light, Display"], correct: 0 },
@@ -144,31 +158,35 @@ function showResults() {
   const name = document.getElementById("playerName").value.trim();
   document.getElementById("finalScore").textContent = `${name}, deine Punktzahl: ${score}`;
 
-  // Ergebnis senden
-  fetch(POST_URL, {
-    method: "POST",
-    body: JSON.stringify({ name, score }),
-    headers: { "Content-Type": "application/json" }
-  }).then(res => console.log("Ergebnis gesendet:", res.status))
-    .catch(err => console.error("Fehler beim Senden:", err));
+  // Punkte in Firebase speichern
+  push(ref(db, "scores"), {
+    name: name,
+    score: score,
+    timestamp: Date.now()
+  });
 
-  // Ranking anzeigen
-  fetch(GET_URL)
-    .then(res => res.json())
-    .then(data => {
-      const list = document.getElementById("leaderboardList");
-      list.innerHTML = "";
-      data.slice(0, 10).forEach(entry => {
+  // Ranking laden
+  const list = document.getElementById("leaderboardList");
+  list.innerHTML = "";
+  const topScoresRef = query(ref(db, "scores"), orderByChild("score"), limitToFirst(100));
+
+  get(topScoresRef).then(snapshot => {
+    if (snapshot.exists()) {
+      const data = [];
+      snapshot.forEach(child => data.push(child.val()));
+      data.sort((a, b) => b.score - a.score);
+      data.slice(0, 10).forEach((entry, i) => {
         const li = document.createElement("li");
-        li.textContent = `#${entry.rank} ${entry.name} – ${entry.score} Punkte`;
+        li.textContent = `#${i + 1} ${entry.name} – ${entry.score} Punkte`;
         list.appendChild(li);
       });
-    })
-    .catch(err => {
-      console.error("Ranking konnte nicht geladen werden:", err);
-    });
+    }
+  });
 }
 </script>
+
+</body>
+</html>
 
 </body>
 </html>
