--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
   <title>sld Jubiläums-Quiz</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
       background: #111;
@@ -19,8 +19,8 @@
       width: 100%;
     }
     h1, h2 {
-      color: #0ff;
       text-align: center;
+      color: #0ff;
     }
     .question-box {
       background: #222;
@@ -41,9 +41,7 @@
     .answers button.selected {
       background-color: #06f;
     }
-    .hidden {
-      display: none;
-    }
+    .hidden { display: none; }
     .timer {
       font-size: 1.5em;
       color: #0f0;
@@ -55,10 +53,11 @@
 <body>
   <div class="container">
     <h1>🎉 sld Jubiläums-Quiz 🎉</h1>
-    <p>8 Fragen · 30 Sekunden pro Frage · Punkte für Schnelligkeit</p>
+    <p>8 Fragen · 30 Sekunden pro Frage · Punkte für Schnelligkeit<br><i>8 questions · 30 seconds per question · Points for speed</i></p>
 
     <div id="startScreen">
-      <button onclick="startQuiz()">Quiz starten</button>
+      <p><strong>Drücke den Startknopf, um das Quiz zu beginnen</strong><br><i>Press the start button to begin the quiz</i></p>
+      <button onclick="startQuiz()">Quiz starten · Start quiz</button>
     </div>
 
     <div id="quizScreen" class="hidden">
@@ -71,9 +70,9 @@
     </div>
 
     <div id="resultScreen" class="hidden">
-      <h2>🏁 Quiz beendet!</h2>
+      <h2>🏁 Quiz beendet! · Quiz finished!</h2>
       <p id="finalScore"></p>
-      <p>Bitte zeige dein Ergebnis dem Moderator.</p>
+      <p>Bitte zeige dein Ergebnis dem Moderator.<br><i>Please show your result to the moderator.</i></p>
     </div>
   </div>
 
@@ -91,9 +90,7 @@ const questions = [
   {
     question: "Wann fand die Gewerbeanmeldung statt?<br><i>When was the business registered?</i>",
     answers: [
-      "14.01.1995",
-      "14.02.1995",
-      "14.03.1995"
+      "14.01.1995", "14.02.1995", "14.03.1995"
     ],
     correct: 1
   },
@@ -153,13 +150,10 @@ function startQuiz() {
 
 function showQuestion() {
   const q = questions[currentQuestion];
-  const questionNum = document.getElementById("questionNum");
-  const questionText = document.getElementById("questionText");
-  const answerButtons = document.getElementById("answerButtons");
-  const timerEl = document.getElementById("timer");
+  document.getElementById("questionNum").innerHTML = `Frage ${currentQuestion + 1} / ${questions.length}`;
+  document.getElementById("questionText").innerHTML = q.question;
 
-  questionNum.textContent = `Frage ${currentQuestion + 1} / ${questions.length}`;
-  questionText.innerHTML = q.question;
+  const answerButtons = document.getElementById("answerButtons");
   answerButtons.innerHTML = "";
   selected = false;
 
@@ -172,8 +166,7 @@ function showQuestion() {
         const timeTaken = Math.floor((Date.now() - startTime) / 1000);
         const isCorrect = index === q.correct;
         if (isCorrect) {
-          let bonus = Math.max(0, 1000 - timeTaken * 20);
-          if (bonus < 300) bonus = 300;
+          let bonus = Math.max(300, 1000 - timeTaken * 20);
           score += bonus;
         }
         btn.classList.add("selected");
@@ -183,12 +176,12 @@ function showQuestion() {
   });
 
   let time = 30;
-  timerEl.textContent = time;
+  document.getElementById("timer").textContent = time;
   startTime = Date.now();
   clearInterval(timerInterval);
   timerInterval = setInterval(() => {
     time--;
-    timerEl.textContent = time;
+    document.getElementById("timer").textContent = time;
     if (time <= 0) {
       clearInterval(timerInterval);
       currentQuestion++;
@@ -205,7 +198,7 @@ function showResults() {
   document.getElementById("quizScreen").classList.add("hidden");
   document.getElementById("resultScreen").classList.remove("hidden");
   document.getElementById("finalScore").innerHTML =
-    `Dein Score: <strong>${score}</strong> Punkte`;
+    `Dein Score: <strong>${score}</strong> Punkte<br><i>Your score: <strong>${score}</strong> points</i>`;
 }
 </script>
 </body>
